--- a/app/views/user_templates/show.html.erb
+++ b/app/views/user_templates/show.html.erb
@@ -12,9 +12,9 @@
     Edit user
   </dt>
   <dd>
-    <form action="/update_user/<%=@new_username%>" method="post">
+    <form action="/update_user/<%=@the_user.username%>" method="post">
       <label for="browser_username">Username</label>
-      <input id="browser_username" type="text" name="input_username" value=user.username>
+      <input id="browser_username" type="text" name="input_username" value= "<%=@the_user.username%>">
 
       <button>Update user</button>
     </form>
