--- a/app/views/photo_templates/show.html.erb
+++ b/app/views/photo_templates/show.html.erb
@@ -30,3 +30,28 @@
   <dd>
     <%= @photo_details.created_at %>
   </dd>
+
+  <dt>
+    Edit photo
+  </dt>
+  <dd>
+    <form action="/update_photo/<%= @photo_details.id %>" method="post">
+      <label for="browser_image">Image</label>
+      <input id="browser_image" type="text" name="input_image" placeholder="Enter a URL for the image..." value= "<%= @photo_details.image %>">
+
+      <label for="browser_caption">Caption</label>
+      <textarea id="browser_caption" name="input_caption" placeholder="Enter a caption for the photo..." value= "<%= @photo_details.caption %>"></textarea>
+
+      <button>Update photo</button>
+    </form>
+  </dd>
+
+  <dt>
+    Delete photo
+  </dt>
+  <dd>
+    <a href="/delete_photo/<%= @photo_details.id %>">
+      Delete this photo
+    </a>
+  </dd>
+</dl>
